# pharmarl

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
colab/: train_pharmarl.ipynb
docs/: baseline-experiments.md  baselines.md  blog-post.md  chemistry-primer.md  env-spec.md  lab-notebook.md  pitch-script.md  qa-defense.md  training-fallback.md
docs/validation_2026-04-26_redeploy_verified/: README.md  _meta.json  exit_codes.tsv  flags_via_reset.txt  pytest.txt  (+6 more)
examples/: before_after_demo.py  demo.py  eval_with_ci.py  gemini_episode.py  manual_episode.py  openrouter_episode.py  plot_results.py
paper/: README.md  main.tex  refs.bib
resources/: FAQs on Discord.md  claude-sonnet-chat.txt  discord-chat.txt  email-apr-19.txt  judging-criteria.txt
runs/: README.md
scripts/: deploy_hf_space.py  h200_train_entry.py  launch_h200_job.py  run_validation_log.sh  smoke_notebook_locally.py  train_grpo.py  validate_stack.py  verify_reward_externally.py
server/: Dockerfile  __init__.py  app.py  critic.py  curriculum.py  drug_discovery_environment.py  grader.py  oversight.py  requirements.txt  rubrics.py  scenarios.py
tests/: test_action_normalization.py  test_critic.py  test_cross_family.py  test_env.py  test_http_serialization.py  test_oracles.py  test_oversight.py  test_reward_redteam.py  test_rubrics.py  test_schema_drift.py  test_validation.py
training_space/: .dockerignore  Dockerfile  HF_JOBS.md  README.md  run.py
ui/: README.md  agents.py  app.py  render.py
(+33 files in other folders)
